--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,12 @@
 
 </head>
 <body>
-    <h1>Aquí vamos a hacer un blogspot</h1>
-    <p>y este es el primer párrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo del post</h1>
+            <p>y este es el párrafo de inicio donde vamos a explicar las cosas incríbles que se pueden hacer con ramas</p>
+        </div>
+    </div>
+    
 </body>
 </html>
