--- a/blogspot.html
+++ b/blogspot.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Este es el título atractivo del post</h1>
             <p>y este es el párrafo de inicio donde vamos a explicar las cosas incríbles que se pueden hacer con ramas</p>
