--- a/blogspot.html
+++ b/blogspot.html
@@ -10,10 +10,11 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
-            <h1>Este es el título atractivo del post</h1>
+            <h1>Este es el título atractivo e interesante del post</h1>
             <p>y este es el párrafo de inicio donde vamos a explicar las cosas incríbles que se pueden hacer con ramas</p>
         </div>
     </div>
