--- a/blogspot.html
+++ b/blogspot.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogspot</title>
+    <link rel="stylesheet" href="./css/estilos.css">
 
 </head>
 <body>
@@ -12,6 +13,7 @@
         <div id="post">
             <h1>Este es el título atractivo del post</h1>
             <p>y este es el párrafo de inicio donde vamos a explicar las cosas incríbles que se pueden hacer con ramas</p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora</p>
         </div>
     </div>
     
