--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="logo"></div>
         <div id="cabecera">
+            <img src="./imagenes/dragon.png" alt="">
             Hyperblog 2.0
             <span id="tagline">Tu blog de cabecera</span>
         </div>
