--- a/blogspot.html
+++ b/blogspot.html
@@ -21,6 +21,10 @@
             <p>suscríbete y dale like</p>
         </div>
     </div>
+
+    <div class="footer">
+        Hecho con amor en Platzi ;)
+    </div>
     
 </body>
 </html>
