--- a/blogspot.html
+++ b/blogspot.html
@@ -20,7 +20,7 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora</p>
             <p>suscríbete y dale like</p>
         </div>
-        <div class="footer">
+        <div id="footer">
             Hecho con amor en Platzi ;)
         </div>
     </div>
