añadí disciplina al footer

--- a/blogspot.html
+++ b/blogspot.html
@@ -23,7 +23,7 @@
             <p>suscríbete y dale like</p>
         </div>
         <div id="footer">
-            Hecho con amor en Platzi ;)
+            Hecho con amor y disciplina en Platzi ;)
         </div>
     </div>
 
