Agregué una imagen

--- a/blogspot.html
+++ b/blogspot.html
@@ -19,6 +19,7 @@
         <div id="post">
             <h1>Este es el título EXCITANTE e interesante del post HOY HARÉ UN FORK porque es mágico</h1>
             <p>y este es el párrafo de comienzo donde vamos a tratar las cosas incríbles que se pueden hacer con ramas</p>
+            <img src="./imagenes/ventana.jpg" alt="ventana">
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora</p>
             <p>suscríbete y dale like</p>
         </div>
